--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "fontawesome": "^4.7.2",
+    "jshint": "^2.9.6",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
